Bug 433611 - Dolphin freezes forever if there is an unavailable network mount in /etc/fstab
Summary: Dolphin freezes forever if there is an unavailable network mount in /etc/fstab
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: general (other bugs)
Version First Reported In: 20.12.2
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords:
Depends on:
Blocks: 504984
  Show dependency treegraph
 
Reported: 2021-02-25 19:26 UTC by Jens
Modified: 2026-04-15 17:03 UTC (History)
10 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.26
Sentry Crash Report:


Attachments
Trace with gdb (79.04 KB, text/plain)
2025-02-11 12:47 UTC, daniel_moelders
Details
Trace with valgrind (29.72 KB, text/plain)
2025-02-11 12:48 UTC, daniel_moelders
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jens 2021-02-25 19:26:33 UTC
SUMMARY
see $SUBJECT

STEPS TO REPRODUCE
1. create (e.g.) SMB mount in /etc/fstab, user mountable, mount it
2. start dolphin, but do not (necessarily) access this share
3. kill connection to server via pulling the cable from the *server* (so that the PC still has a link, but it doesn't go anywhere)

OBSERVED RESULT
Dolphin freezes after a few clicks, does not recover, has to be killed. Newly started Dolphin process also freezes quickly.

EXPECTED RESULT
Dolphin should put all accesses to non-local mount points in a separate thread which can timeout after some time and do not block the main application. If shares become unavailable (due to I/O errors, network stalling, or whatever) the shares should be set "offline" until explicitly clicked on again.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: 20.10 with all updates applied.
Comment 1 daniel_moelders 2024-12-28 16:40:04 UTC
I am also encountering this issue on Plasma Version 6.2.4, Dolphin Version 24.12.0, and KDE Frameworks Version 6.9.0.
In my case, the bug appears when accessing a CIFS network share mounted via /etc/fstab. 
The share is accessed over a slow VPN connection, which causes Dolphins UI to hang. 
The problem does not occur when the same share is mounted directly within Dolphin (without adding it to /etc/fstab).
Comment 2 TraceyC 2025-02-10 21:43:40 UTC
(In reply to Jens from comment #0)

This is likely the same as bug 494224. We need a backtrace in order to find out for sure.

Can you please attach a backtrace of the crash using the `coredumpctl` command-line program, as detailed in [https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports#Retrieving_a_backtrace_using_coredumpctl](https://community.kde.org/Guidelines_and_HOWTOs/Debugging/How_to_create_useful_crash_reports#Retrieving_a_backtrace_using_coredumpctl)?

Thanks!


(In reply to Jens from comment #1)
Different crashes might have different causes, even if the symptoms look similar. You'll also need to get us a backtrace and we can see.

Thanks again!
Comment 3 daniel_moelders 2025-02-11 12:47:53 UTC
Created attachment 178140 [details]
Trace with gdb
Comment 4 daniel_moelders 2025-02-11 12:48:21 UTC
Created attachment 178141 [details]
Trace with valgrind
Comment 5 daniel_moelders 2025-02-11 12:48:40 UTC
(In reply to TraceyC from comment #2)
> (In reply to Jens from comment #0)
> 
> This is likely the same as bug 494224. We need a backtrace in order to find
> out for sure.
> 
> Can you please attach a backtrace of the crash using the `coredumpctl`
> command-line program, as detailed in
> [https://community.kde.org/Guidelines_and_HOWTOs/Debugging/
> How_to_create_useful_crash_reports#Retrieving_a_backtrace_using_coredumpctl](
> https://community.kde.org/Guidelines_and_HOWTOs/Debugging/
> How_to_create_useful_crash_reports#Retrieving_a_backtrace_using_coredumpctl)?
> 
> Thanks!
> 
> 
> (In reply to Jens from comment #1)
> Different crashes might have different causes, even if the symptoms look
> similar. You'll also need to get us a backtrace and we can see.
> 
> Thanks again!

I've collected traces using both valgrind and gdb as described in the Guidelines and Attached them. 
To clarify, I did not observe an actual crash, but rather Dolphin becomes completely unresponsive. 
Here’s what I did in the traces:

  1. I launched Dolphin and connected to the VPN.
  2. I mounted the network shares defined in /etc/fstab.
  3. I navigated to the network share folders, then to a local folder.
  4. I disconnected the VPN connection, and Dolphin then froze while trying to navigate to another local folder.
  5. I waited a few minutes
  6. I killed dolphin 

Once the VPN was reconnected, Dolphin became responsive again almost immediately.
So, the program does not crash, but freezes completely while trying to interact with local directories after the VPN disconnects. 
I hope this helps, and feel free to let me know if you need anything else.
Comment 6 TraceyC 2025-02-11 17:26:28 UTC
Thanks for the backtraces. I'll let one of the more experienced contributors take it from here.
Comment 7 riseofthenorse 2025-08-05 18:27:31 UTC
I'm also experiencing this issue, both with SMB and with NFS shares with Dolphin 25.04.3 (on KDE Plasma 6.3.6)
Comment 8 Jens 2025-10-21 10:42:36 UTC
Any news about this hug?
Dolphin constantly freezing is driving me insane... 😑
Thank you!
Comment 9 TraceyC 2025-10-21 15:04:31 UTC
I understand this is a frustrating issue. Please be patient. Many KDE developers are volunteers, working in their spare time. There are literally thousands of opened bugs. This will be addressed when someone with the appropriate knowledge has the time.

In the meantime, the workaround is to set "noauto" on the mounts in /etc/fstab that cause Dolphin to freeze, so it isn't auto mounted (so it can't cause issues if the share isn't available). Also, you can use xkill to force close the Dolphin window.
Comment 10 Jens 2025-10-21 19:34:23 UTC
Thanks for the heads up. I'm aware this is all volunteer work, no offense intended.

I have now worked around it by force umounting all network shares when suspending, and before shutdown, to avoid these hangs.
If I can help to find a real solution here in any other way, please do ask!
Comment 11 Méven 2025-10-23 15:22:30 UTC
(In reply to daniel_moelders from comment #3)
> Created attachment 178140 [details]
> Trace with gdb

#0  __GI___fstatat64 (fd=-100, file=0x5555562120f0 "/mnt/truenas/service_data", buf=0x7fffffffc1e0, flag=256) at ../sysdeps/unix/sysv/linux/fstatat64.c:159
        r = -512
#1  0x00007ffff7940b43 in KMountPoint::possibleMountPoints (infoNeeded=..., infoNeeded@entry=...) at /usr/src/debug/kio/kio-6.10.0/src/core/kmountpoint.cpp:194

We don't have a way from the system perspective to know in advance whether a filesystem is "working" i.e accessible or not beforehand.
Or at least I don't know how to do that.

A potential complicated solution is to use libiouring since it allows to do asynchrouns syscalls and cancel them.
statvfs is not one handled.

https://bugs.kde.org/show_bug.cgi?id=423187
https://bugs.kde.org/show_bug.cgi?id=441077
https://bugs.kde.org/show_bug.cgi?id=445065
https://bugs.kde.org/show_bug.cgi?id=503995
Comment 12 Jens 2025-10-23 20:36:11 UTC
If there is no way to safely (ie. without stall or crash) handle remote file systems, I would suggest to not touch them at all unless the user explicitly asks to (ie. clicks on a mountpoint). Don't enumerate or walk through all mounted devices if this may cause having to wait for a timeout.

Alternatively, how complicated is the async solution? Is it feasible? How do other file managers do it?
Comment 13 aristsakas 2025-12-31 13:15:31 UTC
maybe a relevant bug 501475
Comment 14 Bug Janitor Service 2026-01-07 01:11:27 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/kcoreaddons/-/merge_requests/548
Comment 15 Nate Graham 2026-04-11 11:53:16 UTC
Git commit 77a90445a616bac2f8b3fdf8e9abd47cda97071e by Nate Graham, on behalf of Oliver Schramm.
Committed on 11/04/2026 at 11:45.
Pushed by ngraham into branch 'master'.

kfilesystemtype: use libmount instead of statfs when available

M  +5    -0    CMakeLists.txt
M  +4    -0    src/lib/CMakeLists.txt
M  +1    -0    src/lib/io/config-kfilesystemtype.h.cmake
M  +22   -0    src/lib/io/kfilesystemtype.cpp

https://invent.kde.org/frameworks/kcoreaddons/-/commit/77a90445a616bac2f8b3fdf8e9abd47cda97071e