kfilesystemtype: use libmount instead of statfs when available

BUG:433611