src/lib/io/config-kfilesystemtype.h.cmake
@@ -1,1 +1,2 @@
 #cmakedefine01 HAVE_UDEV
+#cmakedefine01 HAVE_LIB_MOUNT
